Fixed overflow on small screens

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -111,6 +111,7 @@ a:not(.hvr-underline-reveal):hover {
   display: none;
   background: #fff;
   width: 410px;
+  max-width: 100vw;
   padding: 30px;
   box-shadow: 0 0 8px rgba(0,0,0,0.1);
 }
